--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,7 +5,7 @@ body {
   font-weight: 300;
   font-size: 1rem;
   font-family: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  background-image: url("../images/polygo.png");
+  background-image: url("https://res.cloudinary.com/dxhgszxvl/image/upload/v1600527823/polygo_cf5xws.png");
   background-position: -500px -1585px;
   background-repeat: no-repeat; }
 
